bootstrap columns, remove buttons in favor of start/end text commands, fix trade log word overflow by inserting spaces with json.stringify

--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,15 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.row {
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+
+.commandForm {
+  font-size: 12px;
 }
 
 .commandForm label input {
